[project]
name = "SHORTNAME"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
]

[project.optional-dependencies]
dev = ["mypy", "black", "isort", "pylint", "pytest", "pytest-md", "validate-pyproject", "build"]

[project.urls]
homepage = "PROJECT_URL"

[project.scripts]


[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "SHORTNAME.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["SHORTNAME", "SHORTNAME.*"]
exclude = ["build*", "dist*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
SHORTNAME = ["py.typed"]

# Tool configuration lives in dedicated files (managed by the template):
#   mypy   → mypy.ini
#   pylint → .pylintrc
#   isort  → .isort.cfg
